--- a/README.rdoc
+++ b/README.rdoc
@@ -13,9 +13,9 @@ YouGotListings API documentation can be found here: http://www.yougotlistings.co
 
   gem install you_got_listed
 
-In a rails 3 app  (0.2.x only)
+In a rails 3 app
 
-  gem 'you_got_listed', '~> 0.3.0'
+  gem 'you_got_listed', '~> 0.4.0'
 
 In a rails 2.3.x app  (0.2.x only)
 
